testsuite/single/tests/compiler/fail/local_redef.lpc
void foo(int x) {
    int x;
}
